@@ -11,6 +11,7 @@
     Enhancements, changes:
     ----------------------------
     + Improved php7.4 compatibility;
+    + SameSite=Strict enabled on site cookies;
     + SAML2
         + php-saml updated to 3.4.1 (#3055);
         + Removal of php-mcrypt dependancy;
